# Pypi_package_publish_guide

./: Package_guide_to_pypi.docx  README.md
Your_project_name/: LICENSE  README.md  pyproject.toml
Your_project_name/Your_project_name/: __init__.py  file1.py  file2.py
