[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Your_Project_Name"
version = "0.0.1"
authors = [
    { name="Your name", email="your_email@gmail.com" },
]
description = "Short description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/"
Issues = "https://github.com/yourusername/issues"
